# diff2doc

./: .gitignore  README.md  pyproject.toml
doc/: diff2doc_project_plan.docx  diff2doc_project_plan.md  plan.md
src/diff2doc/: cli.py  context.py  explanation.py  git_diff.py  grouping.py  models.py  renderer.py
tests/: test_context.py  test_explanation.py  test_git_diff.py  test_renderer.py
