[project]
name = "diff2doc"
version = "0.1.0"
description = "A CLI tool that turns git diffs into structured review briefs for human reviewers."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Henry Long" }]
dependencies = ["anthropic>=0.96.0", "typer>=0.12"]

[project.scripts]
diff2doc = "diff2doc.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/diff2doc"]

[project.optional-dependencies]
dev = ["ruff>=0.6", "mypy>=1.11", "pytest>=8.0"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
